--- a/devtemplate/templates/ManagementVisit_templateTV.html
+++ b/devtemplate/templates/ManagementVisit_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ManagementVisit-MgtVstID-<%%VALUE(id)%%>" class="ManagementVisit-MgtVstID"><%%SELECT%%><%%VALUE(MgtVstID)%%><%%ENDSELECT%%></td>
-		<td id="ManagementVisit-ccpID-<%%VALUE(id)%%>" class="ManagementVisit-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="ManagementVisit-ccpID-<%%VALUE(id)%%>" class="ManagementVisit-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="ManagementVisit-fo_Classification-<%%VALUE(id)%%>" class="ManagementVisit-fo_Classification"><%%SELECT%%><%%VALUE(fo_Classification)%%><%%ENDSELECT%%></td>
 		<td id="ManagementVisit-fo_RequiredDate-<%%VALUE(id)%%>" class="ManagementVisit-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="ManagementVisit-ot_ap_Review-<%%VALUE(id)%%>" class="ManagementVisit-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
