--- a/devtemplate/templates/ManagementVisit_templateTVS.html
+++ b/devtemplate/templates/ManagementVisit_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ManagementVisit-MgtVstID-<%%VALUE(id)%%>" class="ManagementVisit-MgtVstID"><%%VALUE(MgtVstID)%%></td>
-		<td id="ManagementVisit-ccpID-<%%VALUE(id)%%>" class="ManagementVisit-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="ManagementVisit-ccpID-<%%VALUE(id)%%>" class="ManagementVisit-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="ManagementVisit-fo_Classification-<%%VALUE(id)%%>" class="ManagementVisit-fo_Classification"><%%VALUE(fo_Classification)%%></td>
 		<td id="ManagementVisit-fo_RequiredDate-<%%VALUE(id)%%>" class="ManagementVisit-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="ManagementVisit-ot_ap_Review-<%%VALUE(id)%%>" class="ManagementVisit-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
