--- a/devtemplate/templates/ProjectTeam_templateTVS.html
+++ b/devtemplate/templates/ProjectTeam_templateTVS.html
@@ -5,16 +5,16 @@
 <!-- add the following to the ProjectTeam_init() hook (in hooks/ProjectTeam.php file) -->
 <!--     $options->ShowTableHeader = 0;     -->
 
-		<td id="ProjectTeam-EmpNo-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-EmpNo"><%%VALUE(EmpNo)%%></td>
-		<td id="ProjectTeam-Name-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-Name"><%%VALUE(Name)%%></td>
-		<td id="ProjectTeam-BaseLocation-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-BaseLocation"><%%VALUE(BaseLocation)%%></td>
-		<td id="ProjectTeam-fo_TermEmployment-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-fo_TermEmployment"><%%VALUE(fo_TermEmployment)%%></td>
+		<td id="ProjectTeam-EmpNo-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-EmpNo"><a><%%VALUE(EmpNo)%%></a></td>
+		<td id="ProjectTeam-Name-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-Name"><a><%%VALUE(Name)%%></a></td>
+		<td id="ProjectTeam-BaseLocation-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-BaseLocation"><a><%%VALUE(BaseLocation)%%></a></td>
+		<td id="ProjectTeam-fo_TermEmployment-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-fo_TermEmployment"><a><%%VALUE(fo_TermEmployment)%%></a></td>
 		<td id="ProjectTeam-fo_Photo01-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-fo_Photo01"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo01)%%>" data-lightbox="ProjectTeam-fo_Photo01"><img src="thumbnail.php?i=<%%VALUE(fo_Photo01)%%>&t=ProjectTeam&f=fo_Photo01&v=tv" class="img-thumbnail"></a></td>
 		<td id="ProjectTeam-fo_Photo02-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-fo_Photo02"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo02)%%>" data-lightbox="ProjectTeam-fo_Photo02"><img src="thumbnail.php?i=<%%VALUE(fo_Photo02)%%>&t=ProjectTeam&f=fo_Photo02&v=tv" class="img-thumbnail"></a></td>
 		<td id="ProjectTeam-fo_Photo03-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-fo_Photo03"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo03)%%>" data-lightbox="ProjectTeam-fo_Photo03"><img src="thumbnail.php?i=<%%VALUE(fo_Photo03)%%>&t=ProjectTeam&f=fo_Photo03&v=tv" class="img-thumbnail"></a></td>
-		<td id="ProjectTeam-fo_Position-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-fo_Position"><%%VALUE(fo_Position)%%></td>
-		<td id="ProjectTeam-ot_ap_Review-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
-		<td id="ProjectTeam-ot_ap_Approval-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
-		<td id="ProjectTeam-ot_ap_QC-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
-		<td id="ProjectTeam-ot_ap_filed-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_filed"><%%VALUE(ot_ap_filed)%%></td>
-		<td id="ProjectTeam-ot_ap_lastmodified-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_lastmodified"><%%VALUE(ot_ap_lastmodified)%%></td>
+		<td id="ProjectTeam-fo_Position-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-fo_Position"><a><%%VALUE(fo_Position)%%></a></td>
+		<td id="ProjectTeam-ot_ap_Review-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_Review"><a><%%VALUE(ot_ap_Review)%%></a></td>
+		<td id="ProjectTeam-ot_ap_Approval-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_Approval"><a><%%VALUE(ot_ap_Approval)%%></a></td>
+		<td id="ProjectTeam-ot_ap_QC-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_QC"><a><%%VALUE(ot_ap_QC)%%></a></td>
+		<td id="ProjectTeam-ot_ap_filed-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_filed"><a><%%VALUE(ot_ap_filed)%%></a></td>
+		<td id="ProjectTeam-ot_ap_lastmodified-<%%VALUE(ProjectTeamID)%%>" class="ProjectTeam-ot_ap_lastmodified"><a><%%VALUE(ot_ap_lastmodified)%%></a></td>
