--- a/devtemplate/templates/QuarterlyMeeting_templateTV.html
+++ b/devtemplate/templates/QuarterlyMeeting_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="QuarterlyMeeting-QmID-<%%VALUE(id)%%>" class="QuarterlyMeeting-QmID"><%%SELECT%%><%%VALUE(QmID)%%><%%ENDSELECT%%></td>
-		<td id="QuarterlyMeeting-ccpID-<%%VALUE(id)%%>" class="QuarterlyMeeting-ccpID text-right"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
+		<td id="QuarterlyMeeting-ccpID-<%%VALUE(id)%%>" class="QuarterlyMeeting-ccpID text-left"><%%SELECT%%><%%VALUE(ccpID)%%><%%ENDSELECT%%></td>
 		<td id="QuarterlyMeeting-fo_RequiredDate-<%%VALUE(id)%%>" class="QuarterlyMeeting-fo_RequiredDate"><%%SELECT%%><%%VALUE(fo_RequiredDate)%%><%%ENDSELECT%%></td>
 		<td id="QuarterlyMeeting-ot_ap_Review-<%%VALUE(id)%%>" class="QuarterlyMeeting-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="QuarterlyMeeting-ot_ap_Approval-<%%VALUE(id)%%>" class="QuarterlyMeeting-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
