--- a/devtemplate/templates/WorkPermit_templateTVS.html
+++ b/devtemplate/templates/WorkPermit_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="WorkPermit-RecNum-<%%VALUE(id)%%>" class="WorkPermit-RecNum"><%%VALUE(RecNum)%%></td>
-		<td id="WorkPermit-WrLocID-<%%VALUE(id)%%>" class="WorkPermit-WrLocID text-right"><%%VALUE(WrLocID)%%></td>
+		<td id="WorkPermit-WrLocID-<%%VALUE(id)%%>" class="WorkPermit-WrLocID text-left"><%%VALUE(WrLocID)%%></td>
 		<td id="WorkPermit-fo_Type-<%%VALUE(id)%%>" class="WorkPermit-fo_Type"><%%VALUE(fo_Type)%%></td>
 		<td id="WorkPermit-ot_ap_Review-<%%VALUE(id)%%>" class="WorkPermit-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="WorkPermit-ot_ap_Approval-<%%VALUE(id)%%>" class="WorkPermit-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
