--- a/devtemplate/templates/employees_templateTVS.html
+++ b/devtemplate/templates/employees_templateTVS.html
@@ -5,16 +5,16 @@
 <!-- add the following to the employees_init() hook (in hooks/employees.php file) -->
 <!--     $options->ShowTableHeader = 0;     -->
 
-		<td id="employees-EmpNo-<%%VALUE(EmployeeID)%%>" class="employees-EmpNo"><%%VALUE(EmpNo)%%></td>
-		<td id="employees-Name-<%%VALUE(EmployeeID)%%>" class="employees-Name"><%%VALUE(Name)%%></td>
-		<td id="employees-BaseLocation-<%%VALUE(EmployeeID)%%>" class="employees-BaseLocation"><%%VALUE(BaseLocation)%%></td>
-		<td id="employees-fo_TermEmployment-<%%VALUE(EmployeeID)%%>" class="employees-fo_TermEmployment"><%%VALUE(fo_TermEmployment)%%></td>
+		<td id="employees-EmpNo-<%%VALUE(EmployeeID)%%>" class="employees-EmpNo"><a><%%VALUE(EmpNo)%%></a></td>
+		<td id="employees-Name-<%%VALUE(EmployeeID)%%>" class="employees-Name"><a><%%VALUE(Name)%%></a></td>
+		<td id="employees-BaseLocation-<%%VALUE(EmployeeID)%%>" class="employees-BaseLocation"><a><%%VALUE(BaseLocation)%%></a></td>
+		<td id="employees-fo_TermEmployment-<%%VALUE(EmployeeID)%%>" class="employees-fo_TermEmployment"><a><%%VALUE(fo_TermEmployment)%%></a></td>
 		<td id="employees-fo_Photo01-<%%VALUE(EmployeeID)%%>" class="employees-fo_Photo01"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo01)%%>" data-lightbox="employees-fo_Photo01"><img src="thumbnail.php?i=<%%VALUE(fo_Photo01)%%>&t=employees&f=fo_Photo01&v=tv" class="img-thumbnail"></a></td>
 		<td id="employees-fo_Photo02-<%%VALUE(EmployeeID)%%>" class="employees-fo_Photo02"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo02)%%>" data-lightbox="employees-fo_Photo02"><img src="thumbnail.php?i=<%%VALUE(fo_Photo02)%%>&t=employees&f=fo_Photo02&v=tv" class="img-thumbnail"></a></td>
 		<td id="employees-fo_Photo03-<%%VALUE(EmployeeID)%%>" class="employees-fo_Photo03"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo03)%%>" data-lightbox="employees-fo_Photo03"><img src="thumbnail.php?i=<%%VALUE(fo_Photo03)%%>&t=employees&f=fo_Photo03&v=tv" class="img-thumbnail"></a></td>
-		<td id="employees-fo_Position-<%%VALUE(EmployeeID)%%>" class="employees-fo_Position"><%%VALUE(fo_Position)%%></td>
-		<td id="employees-ot_ap_Review-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
-		<td id="employees-ot_ap_Approval-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
-		<td id="employees-ot_ap_QC-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
-		<td id="employees-ot_ap_filed-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_filed"><%%VALUE(ot_ap_filed)%%></td>
-		<td id="employees-ot_ap_lastmodified-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_lastmodified"><%%VALUE(ot_ap_lastmodified)%%></td>
+		<td id="employees-fo_Position-<%%VALUE(EmployeeID)%%>" class="employees-fo_Position"><a><%%VALUE(fo_Position)%%></a></td>
+		<td id="employees-ot_ap_Review-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Review"><a><%%VALUE(ot_ap_Review)%%></a></td>
+		<td id="employees-ot_ap_Approval-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Approval"><a><%%VALUE(ot_ap_Approval)%%></a></td>
+		<td id="employees-ot_ap_QC-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_QC"><a><%%VALUE(ot_ap_QC)%%></a></td>
+		<td id="employees-ot_ap_filed-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_filed"><a><%%VALUE(ot_ap_filed)%%></a></td>
+		<td id="employees-ot_ap_lastmodified-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_lastmodified"><a><%%VALUE(ot_ap_lastmodified)%%></a></td>
