--- a/devtemplate/templates/summary_dashboard_templateTV.html
+++ b/devtemplate/templates/summary_dashboard_templateTV.html
@@ -7,10 +7,10 @@
 
 		<td id="summary_dashboard-ot_ap_Date-<%%VALUE(id)%%>" class="summary_dashboard-ot_ap_Date"><%%SELECT%%><%%VALUE(ot_ap_Date)%%><%%ENDSELECT%%></td>
 		<td id="summary_dashboard-fo_Section_Caption-<%%VALUE(id)%%>" class="summary_dashboard-fo_Section_Caption"><%%SELECT%%><%%VALUE(fo_Section_Caption)%%><%%ENDSELECT%%></td>
-		<td id="summary_dashboard-fo_TotalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_TotalCount text-right"><%%SELECT%%><%%VALUE(fo_TotalCount)%%><%%ENDSELECT%%></td>
-		<td id="summary_dashboard-fo_ReviewCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ReviewCount text-right"><%%SELECT%%><%%VALUE(fo_ReviewCount)%%><%%ENDSELECT%%></td>
-		<td id="summary_dashboard-fo_ApprovalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ApprovalCount text-right"><%%SELECT%%><%%VALUE(fo_ApprovalCount)%%><%%ENDSELECT%%></td>
-		<td id="summary_dashboard-fo_IMSControlCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_IMSControlCount text-right"><%%SELECT%%><%%VALUE(fo_IMSControlCount)%%><%%ENDSELECT%%></td>
-		<td id="summary_dashboard-fo_CustomDisplayValue1-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue1 text-right"><%%SELECT%%><%%VALUE(fo_CustomDisplayValue1)%%><%%ENDSELECT%%></td>
-		<td id="summary_dashboard-fo_CustomDisplayValue2-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue2 text-right"><%%SELECT%%><%%VALUE(fo_CustomDisplayValue2)%%><%%ENDSELECT%%></td>
+		<td id="summary_dashboard-fo_TotalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_TotalCount text-left"><%%SELECT%%><%%VALUE(fo_TotalCount)%%><%%ENDSELECT%%></td>
+		<td id="summary_dashboard-fo_ReviewCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ReviewCount text-left"><%%SELECT%%><%%VALUE(fo_ReviewCount)%%><%%ENDSELECT%%></td>
+		<td id="summary_dashboard-fo_ApprovalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ApprovalCount text-left"><%%SELECT%%><%%VALUE(fo_ApprovalCount)%%><%%ENDSELECT%%></td>
+		<td id="summary_dashboard-fo_IMSControlCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_IMSControlCount text-left"><%%SELECT%%><%%VALUE(fo_IMSControlCount)%%><%%ENDSELECT%%></td>
+		<td id="summary_dashboard-fo_CustomDisplayValue1-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue1 text-left"><%%SELECT%%><%%VALUE(fo_CustomDisplayValue1)%%><%%ENDSELECT%%></td>
+		<td id="summary_dashboard-fo_CustomDisplayValue2-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue2 text-left"><%%SELECT%%><%%VALUE(fo_CustomDisplayValue2)%%><%%ENDSELECT%%></td>
 		<td id="summary_dashboard-ot_ap_lastmodified-<%%VALUE(id)%%>" class="summary_dashboard-ot_ap_lastmodified"><%%SELECT%%><%%VALUE(ot_ap_lastmodified)%%><%%ENDSELECT%%></td>
