--- a/devtemplate/templates/summary_dashboard_templateTVS.html
+++ b/devtemplate/templates/summary_dashboard_templateTVS.html
@@ -7,10 +7,10 @@
 
 		<td id="summary_dashboard-ot_ap_Date-<%%VALUE(id)%%>" class="summary_dashboard-ot_ap_Date"><%%VALUE(ot_ap_Date)%%></td>
 		<td id="summary_dashboard-fo_Section_Caption-<%%VALUE(id)%%>" class="summary_dashboard-fo_Section_Caption"><%%VALUE(fo_Section_Caption)%%></td>
-		<td id="summary_dashboard-fo_TotalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_TotalCount text-right"><%%VALUE(fo_TotalCount)%%></td>
-		<td id="summary_dashboard-fo_ReviewCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ReviewCount text-right"><%%VALUE(fo_ReviewCount)%%></td>
-		<td id="summary_dashboard-fo_ApprovalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ApprovalCount text-right"><%%VALUE(fo_ApprovalCount)%%></td>
-		<td id="summary_dashboard-fo_IMSControlCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_IMSControlCount text-right"><%%VALUE(fo_IMSControlCount)%%></td>
-		<td id="summary_dashboard-fo_CustomDisplayValue1-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue1 text-right"><%%VALUE(fo_CustomDisplayValue1)%%></td>
-		<td id="summary_dashboard-fo_CustomDisplayValue2-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue2 text-right"><%%VALUE(fo_CustomDisplayValue2)%%></td>
+		<td id="summary_dashboard-fo_TotalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_TotalCount text-left"><%%VALUE(fo_TotalCount)%%></td>
+		<td id="summary_dashboard-fo_ReviewCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ReviewCount text-left"><%%VALUE(fo_ReviewCount)%%></td>
+		<td id="summary_dashboard-fo_ApprovalCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_ApprovalCount text-left"><%%VALUE(fo_ApprovalCount)%%></td>
+		<td id="summary_dashboard-fo_IMSControlCount-<%%VALUE(id)%%>" class="summary_dashboard-fo_IMSControlCount text-left"><%%VALUE(fo_IMSControlCount)%%></td>
+		<td id="summary_dashboard-fo_CustomDisplayValue1-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue1 text-left"><%%VALUE(fo_CustomDisplayValue1)%%></td>
+		<td id="summary_dashboard-fo_CustomDisplayValue2-<%%VALUE(id)%%>" class="summary_dashboard-fo_CustomDisplayValue2 text-left"><%%VALUE(fo_CustomDisplayValue2)%%></td>
 		<td id="summary_dashboard-ot_ap_lastmodified-<%%VALUE(id)%%>" class="summary_dashboard-ot_ap_lastmodified"><%%VALUE(ot_ap_lastmodified)%%></td>
