--- a/devtemplate/templates/ObsoleteRec_templateTV.html
+++ b/devtemplate/templates/ObsoleteRec_templateTV.html
@@ -6,8 +6,8 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ObsoleteRec-DocconNumber-<%%VALUE(id)%%>" class="ObsoleteRec-DocconNumber"><%%SELECT%%><%%VALUE(DocconNumber)%%><%%ENDSELECT%%></td>
-		<td id="ObsoleteRec-DCCID-<%%VALUE(id)%%>" class="ObsoleteRec-DCCID text-right"><%%SELECT%%><%%VALUE(DCCID)%%><%%ENDSELECT%%></td>
-		<td id="ObsoleteRec-fo_DCCITEM-<%%VALUE(id)%%>" class="ObsoleteRec-fo_DCCITEM text-right"><%%SELECT%%><%%VALUE(fo_DCCITEM)%%><%%ENDSELECT%%></td>
+		<td id="ObsoleteRec-DCCID-<%%VALUE(id)%%>" class="ObsoleteRec-DCCID text-left"><%%SELECT%%><%%VALUE(DCCID)%%><%%ENDSELECT%%></td>
+		<td id="ObsoleteRec-fo_DCCITEM-<%%VALUE(id)%%>" class="ObsoleteRec-fo_DCCITEM text-left"><%%SELECT%%><%%VALUE(fo_DCCITEM)%%><%%ENDSELECT%%></td>
 		<td id="ObsoleteRec-ot_ap_Review-<%%VALUE(id)%%>" class="ObsoleteRec-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="ObsoleteRec-ot_ap_Approval-<%%VALUE(id)%%>" class="ObsoleteRec-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
 		<td id="ObsoleteRec-ot_ap_QC-<%%VALUE(id)%%>" class="ObsoleteRec-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
