--- a/devtemplate/templates/ObsoleteRec_templateTVS.html
+++ b/devtemplate/templates/ObsoleteRec_templateTVS.html
@@ -6,8 +6,8 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="ObsoleteRec-DocconNumber-<%%VALUE(id)%%>" class="ObsoleteRec-DocconNumber"><%%VALUE(DocconNumber)%%></td>
-		<td id="ObsoleteRec-DCCID-<%%VALUE(id)%%>" class="ObsoleteRec-DCCID text-right"><%%VALUE(DCCID)%%></td>
-		<td id="ObsoleteRec-fo_DCCITEM-<%%VALUE(id)%%>" class="ObsoleteRec-fo_DCCITEM text-right"><%%VALUE(fo_DCCITEM)%%></td>
+		<td id="ObsoleteRec-DCCID-<%%VALUE(id)%%>" class="ObsoleteRec-DCCID text-left"><%%VALUE(DCCID)%%></td>
+		<td id="ObsoleteRec-fo_DCCITEM-<%%VALUE(id)%%>" class="ObsoleteRec-fo_DCCITEM text-left"><%%VALUE(fo_DCCITEM)%%></td>
 		<td id="ObsoleteRec-ot_ap_Review-<%%VALUE(id)%%>" class="ObsoleteRec-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="ObsoleteRec-ot_ap_Approval-<%%VALUE(id)%%>" class="ObsoleteRec-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
 		<td id="ObsoleteRec-ot_ap_QC-<%%VALUE(id)%%>" class="ObsoleteRec-ot_ap_QC"><%%VALUE(ot_ap_QC)%%></td>
