--- a/devtemplate/templates/QuarterlyMeeting_templateTVS.html
+++ b/devtemplate/templates/QuarterlyMeeting_templateTVS.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="QuarterlyMeeting-QmID-<%%VALUE(id)%%>" class="QuarterlyMeeting-QmID"><%%VALUE(QmID)%%></td>
-		<td id="QuarterlyMeeting-ccpID-<%%VALUE(id)%%>" class="QuarterlyMeeting-ccpID text-right"><%%VALUE(ccpID)%%></td>
+		<td id="QuarterlyMeeting-ccpID-<%%VALUE(id)%%>" class="QuarterlyMeeting-ccpID text-left"><%%VALUE(ccpID)%%></td>
 		<td id="QuarterlyMeeting-fo_RequiredDate-<%%VALUE(id)%%>" class="QuarterlyMeeting-fo_RequiredDate"><%%VALUE(fo_RequiredDate)%%></td>
 		<td id="QuarterlyMeeting-ot_ap_Review-<%%VALUE(id)%%>" class="QuarterlyMeeting-ot_ap_Review"><%%VALUE(ot_ap_Review)%%></td>
 		<td id="QuarterlyMeeting-ot_ap_Approval-<%%VALUE(id)%%>" class="QuarterlyMeeting-ot_ap_Approval"><%%VALUE(ot_ap_Approval)%%></td>
