--- a/devtemplate/templates/WorkPermit_templateTV.html
+++ b/devtemplate/templates/WorkPermit_templateTV.html
@@ -6,7 +6,7 @@
 <!--     $options->ShowTableHeader = 0;     -->
 
 		<td id="WorkPermit-RecNum-<%%VALUE(id)%%>" class="WorkPermit-RecNum"><%%SELECT%%><%%VALUE(RecNum)%%><%%ENDSELECT%%></td>
-		<td id="WorkPermit-WrLocID-<%%VALUE(id)%%>" class="WorkPermit-WrLocID text-right"><%%SELECT%%><%%VALUE(WrLocID)%%><%%ENDSELECT%%></td>
+		<td id="WorkPermit-WrLocID-<%%VALUE(id)%%>" class="WorkPermit-WrLocID text-left"><%%SELECT%%><%%VALUE(WrLocID)%%><%%ENDSELECT%%></td>
 		<td id="WorkPermit-fo_Type-<%%VALUE(id)%%>" class="WorkPermit-fo_Type"><%%SELECT%%><%%VALUE(fo_Type)%%><%%ENDSELECT%%></td>
 		<td id="WorkPermit-ot_ap_Review-<%%VALUE(id)%%>" class="WorkPermit-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
 		<td id="WorkPermit-ot_ap_Approval-<%%VALUE(id)%%>" class="WorkPermit-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
