--- a/devtemplate/templates/employees_templateTV.html
+++ b/devtemplate/templates/employees_templateTV.html
@@ -5,16 +5,16 @@
 <!-- add the following to the employees_init() hook (in hooks/employees.php file) -->
 <!--     $options->ShowTableHeader = 0;     -->
 
-		<td id="employees-EmpNo-<%%VALUE(EmployeeID)%%>" class="employees-EmpNo"><%%SELECT%%><%%VALUE(EmpNo)%%><%%ENDSELECT%%></td>
-		<td id="employees-Name-<%%VALUE(EmployeeID)%%>" class="employees-Name"><%%VALUE(Name)%%></td>
-		<td id="employees-BaseLocation-<%%VALUE(EmployeeID)%%>" class="employees-BaseLocation"><%%SELECT%%><%%VALUE(BaseLocation)%%><%%ENDSELECT%%></td>
-		<td id="employees-fo_TermEmployment-<%%VALUE(EmployeeID)%%>" class="employees-fo_TermEmployment"><%%SELECT%%><%%VALUE(fo_TermEmployment)%%><%%ENDSELECT%%></td>
+		<td id="employees-EmpNo-<%%VALUE(EmployeeID)%%>" class="employees-EmpNo"><a><%%SELECT%%><%%VALUE(EmpNo)%%><%%ENDSELECT%%></a></td>
+		<td id="employees-Name-<%%VALUE(EmployeeID)%%>" class="employees-Name"><a><%%VALUE(Name)%%></a></td>
+		<td id="employees-BaseLocation-<%%VALUE(EmployeeID)%%>" class="employees-BaseLocation"><a><%%SELECT%%><%%VALUE(BaseLocation)%%><%%ENDSELECT%%></a></td>
+		<td id="employees-fo_TermEmployment-<%%VALUE(EmployeeID)%%>" class="employees-fo_TermEmployment"><a><%%SELECT%%><%%VALUE(fo_TermEmployment)%%><%%ENDSELECT%%></a></td>
 		<td id="employees-fo_Photo01-<%%VALUE(EmployeeID)%%>" class="employees-fo_Photo01"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo01)%%>" data-lightbox="employees-fo_Photo01"><img src="thumbnail.php?i=<%%VALUE(fo_Photo01)%%>&t=employees&f=fo_Photo01&v=tv" class="img-thumbnail"></a></td>
 		<td id="employees-fo_Photo02-<%%VALUE(EmployeeID)%%>" class="employees-fo_Photo02"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo02)%%>" data-lightbox="employees-fo_Photo02"><img src="thumbnail.php?i=<%%VALUE(fo_Photo02)%%>&t=employees&f=fo_Photo02&v=tv" class="img-thumbnail"></a></td>
 		<td id="employees-fo_Photo03-<%%VALUE(EmployeeID)%%>" class="employees-fo_Photo03"><a href="<%%TRANSLATION(ImageFolder)%%><%%VALUE(fo_Photo03)%%>" data-lightbox="employees-fo_Photo03"><img src="thumbnail.php?i=<%%VALUE(fo_Photo03)%%>&t=employees&f=fo_Photo03&v=tv" class="img-thumbnail"></a></td>
-		<td id="employees-fo_Position-<%%VALUE(EmployeeID)%%>" class="employees-fo_Position"><%%VALUE(fo_Position)%%></td>
-		<td id="employees-ot_ap_Review-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Review"><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></td>
-		<td id="employees-ot_ap_Approval-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Approval"><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></td>
-		<td id="employees-ot_ap_QC-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_QC"><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></td>
-		<td id="employees-ot_ap_filed-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_filed"><%%SELECT%%><%%VALUE(ot_ap_filed)%%><%%ENDSELECT%%></td>
-		<td id="employees-ot_ap_lastmodified-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_lastmodified"><%%SELECT%%><%%VALUE(ot_ap_lastmodified)%%><%%ENDSELECT%%></td>
+		<td id="employees-fo_Position-<%%VALUE(EmployeeID)%%>" class="employees-fo_Position"><a><%%VALUE(fo_Position)%%></a></td>
+		<td id="employees-ot_ap_Review-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Review"><a><%%SELECT%%><%%VALUE(ot_ap_Review)%%><%%ENDSELECT%%></a></td>
+		<td id="employees-ot_ap_Approval-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_Approval"><a><%%SELECT%%><%%VALUE(ot_ap_Approval)%%><%%ENDSELECT%%></a></td>
+		<td id="employees-ot_ap_QC-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_QC"><a><%%SELECT%%><%%VALUE(ot_ap_QC)%%><%%ENDSELECT%%></a></td>
+		<td id="employees-ot_ap_filed-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_filed"><a><%%SELECT%%><%%VALUE(ot_ap_filed)%%><%%ENDSELECT%%></a></td>
+		<td id="employees-ot_ap_lastmodified-<%%VALUE(EmployeeID)%%>" class="employees-ot_ap_lastmodified"><a><%%SELECT%%><%%VALUE(ot_ap_lastmodified)%%><%%ENDSELECT%%></a></td>
