--- a/devtemplate/templates/kpi_templateTV.html
+++ b/devtemplate/templates/kpi_templateTV.html
@@ -7,7 +7,7 @@
 
 		<td id="kpi-ot_ap_Date-<%%VALUE(id)%%>" class="kpi-ot_ap_Date"><%%SELECT%%><%%VALUE(ot_ap_Date)%%><%%ENDSELECT%%></td>
 		<td id="kpi-fo_Section_Caption-<%%VALUE(id)%%>" class="kpi-fo_Section_Caption"><%%SELECT%%><%%VALUE(fo_Section_Caption)%%><%%ENDSELECT%%></td>
-		<td id="kpi-fo_MinRecordRequired-<%%VALUE(id)%%>" class="kpi-fo_MinRecordRequired text-right"><%%SELECT%%><%%VALUE(fo_MinRecordRequired)%%><%%ENDSELECT%%></td>
-		<td id="kpi-fo_TaskCompDuration-<%%VALUE(id)%%>" class="kpi-fo_TaskCompDuration text-right"><%%SELECT%%><%%VALUE(fo_TaskCompDuration)%%><%%ENDSELECT%%></td>
-		<td id="kpi-fo_PercentageAchieved-<%%VALUE(id)%%>" class="kpi-fo_PercentageAchieved text-right"><%%SELECT%%><%%VALUE(fo_PercentageAchieved)%%><%%ENDSELECT%%></td>
+		<td id="kpi-fo_MinRecordRequired-<%%VALUE(id)%%>" class="kpi-fo_MinRecordRequired text-left"><%%SELECT%%><%%VALUE(fo_MinRecordRequired)%%><%%ENDSELECT%%></td>
+		<td id="kpi-fo_TaskCompDuration-<%%VALUE(id)%%>" class="kpi-fo_TaskCompDuration text-left"><%%SELECT%%><%%VALUE(fo_TaskCompDuration)%%><%%ENDSELECT%%></td>
+		<td id="kpi-fo_PercentageAchieved-<%%VALUE(id)%%>" class="kpi-fo_PercentageAchieved text-left"><%%SELECT%%><%%VALUE(fo_PercentageAchieved)%%><%%ENDSELECT%%></td>
 		<td id="kpi-ot_ap_lastmodified-<%%VALUE(id)%%>" class="kpi-ot_ap_lastmodified"><%%SELECT%%><%%VALUE(ot_ap_lastmodified)%%><%%ENDSELECT%%></td>
